@@ -191,7 +191,7 @@ public class ShowInspector extends BaseComponent
 	{
 		return new IDirectListener()
 		{
-			public void directTriggered(IComponent component, String[] context,
+			public void directTriggered(IDirect direct, String[] context,
 					IRequestCycle cycle)
 			{
 				Inspector inspector;
