@@ -1,3 +1,8 @@
+* Jan 16 2001 hship
+
+Add ICallback and some implementations.
+Change the interface for IDirectListener slightly.
+
 * Jan 10 2001 hship
 
 Change names of Pool methods slightly.
